# calulate

./: CMakeLists.txt  envsetup.sh  readme  trousers-0.3.14-changelog.patch
tcmtool/: How to Install TCM Driver On Linux.txt  Readme.txt
tcmtool-Linux_Redhat6.2/tcmtool/mytcmtool/: .test.c.swp  test  test.c
tcmtool-Linux_Redhat6.2/tcmtool/svn/tsm/src/tcmalg/: Makefile  Makefile.am  Makefile.in  bn_mont.c  ec_genkey.c  seal.c  tcm_rand.c
tcmtool-Linux_Redhat6.2/tcmtool/svn/tsm/src/tcmalg/.deps/: bnEx.Plo  bn_add.Plo  bn_ctx.Plo  bn_div.Plo  bn_exp.Plo  bn_gcd.Plo  bn_mod.Plo  bn_mul.Plo  bn_recp.Plo  bn_word.Plo  calculate_hash.Plo  ec_encrypt.Plo  ec_operations.Plo  libtcmalg_la-bn_div.Plo  libtcmalg_la-bn_exp.Plo  libtcmalg_la-bn_gcd.Plo  libtcmalg_la-bn_mod.Plo  libtcmalg_la-bn_mont.Plo  libtcmalg_la-bn_print.Plo  libtcmalg_la-bn_shift.Plo  libtcmalg_la-bn_sqrt.Plo  libtcmalg_la-bn_word.Plo  libtcmalg_la-ec_encrypt.Plo  libtcmalg_la-ec_init.Plo  libtcmalg_la-ec_operations.Plo  libtcmalg_la-ec_verify.Plo  libtcmalg_la-mem_clr.Plo  libtcmalg_la-sch.Plo  libtcmalg_la-tcm_bn.Plo  libtcmalg_la-tcm_ecc.Plo  libtcmalg_la-tcm_sms4.Plo  mem.Plo  sch.Plo  sms4.Plo  tcm_rand.Plo  tcm_sms4.Plo
tcmtool-Linux_Redhat6.2/tcmtool/svn/tsm/src/tcmalg/openssl/: bn.h  copy ec_operations.h  ec_operations.h
tcmtool-Linux_Redhat6.2/tcmtool/tcmdV1.1/: .tcm.ko.unsigned.cmd  Makefile  (+6 more)
tcmtool/mytcmtool/: makefile
tcmtool/tcmdV1.1/: .tcm.ko.cmd  .tcm.mod.o.cmd  .tcm.o.cmd  .tcm_tis.ko.unsigned.cmd  .tcm_tis.mod.o.cmd  Makefile~  Module.symvers  modules.order  tcm.c  tcm.c.bak  tcm.h
(+606 files in other folders)
